# Lapis

./: .gitignore  README.md  docker-compose.yml  execute.sh  model_config.yml
forecaster/: main.py
forecaster/module/models/: __init__.py  dummy.py  module.py  reverse_odd.py
getter/: main.py  pyproject.toml
getter/DATA/preprocessed/: tennis.csv
getter/module/models/: dummy.py
getter/scripts/: preprocess_tennis_data.py
picker/: Dockerfile  main.py
picker/module/models/: dummy.py  module.py  standards.py
sender/: main.py  pyproject.toml
sender/module/models/: dummy.py  module.py
sizer/: main.py  pyproject.toml
sizer/module/models/: dummy.py  kelly.py  module.py
test_configs/: model_config_1.yml
treasurer/: main.py
treasurer/module/: __init__.py
treasurer/module/models/: dummy.py  module.py
